--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Document</title>
+	<title>Crypto Pets</title>
 	<link rel="stylesheet" type="text/css" href="index.css">
 	<script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
 </head>
 <body>
 	<div class=”container”>
-		<h1>First Smart Contract</h1>
+		<h1>Crypto Pets</h1>
 		<h2 id=”instructor”></h2>
 		<button id=”name-button” onclick="getContractName()">Get contract name</button>
 	</div>
