--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 <body>
 	<div class=”container”>
 		<h1>Crypto Pets</h1>
-		<h2 id=”instructor”></h2>
+		<h2 id=”instructor”>Get balance</h2>
+		<input type="text" placeholder="Insert contract address here..." id="inputId"><br>
+		<button id=”name-button” onclick="">Get balance</button>
+
+		<h2 id=”instructor”>Get contract name</h2>
 		<button id=”name-button” onclick="getContractName()">Get contract name</button>
 	</div>
 	<p id="p1"> </p>
