added css rules for text

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 </head>
 <body>
 	<div class=”container”>
-		<h1>Crypto Pets</h1>
-		<h2 id=”instructor”>Get balance</h2>
+		<h1 class="text">Crypto Pets</h1>
+		<h2 id=”instructor” class="text">Get balance</h2>
 		<input type="text" placeholder="Insert contract address here..." id="contractBalanceInput"><br>
 		<button id=”name-button” onclick="getTokenBalance()">Get balance</button>
-		<p id="p1"> </p><br>
+		<p id="p1" class="text"> </p><br>
 
-		<h2 id=”instructor”>Get contract name</h2>
+		<h2 id=”instructor” class="text">Get contract name</h2>
 		<button id=”name-button” onclick="getContractName()">Get contract name</button>
 	</div>
 	<p id="p2"> </p>
