--- a/index.html
+++ b/index.html
@@ -47,14 +47,32 @@
 			</div>
 		</div>
 	</nav>
-<hr class="bg-light">
+	<hr class="bg-light">
 	<div class=”container”>
-		<h1 class="text">Crypto Pets</h1>
-		<h2 id=”instructor” class="text">Insert contract address and wallet address</h2>
-		<input type="text" placeholder="Insert contract address here..." id="contractAddressInput"><br>
-		<input type="text" placeholder="Insert wallet address here..." id="contractBalanceInput"><br>
-		<button id=”name-button” onclick="initializeContract(); readButton()">Get Info</button>
-		
+
+		<div class="container">
+			<div class="row">
+				<div class="col">
+					<h1 class="text">Crypto Pets</h1>
+					<h2 id=”instructor” class="text">Insert contract address and wallet address</h2>
+					<form>
+						<div class="mb-3">
+							<label for="contractAddressInput" class="form-label text">Contract address:</label>
+							<input type="text" placeholder="Insert contract address here..." id="contractAddressInput">
+						</div>
+						<div class="mb-3">
+							<label for="exampleInputPassword1" class="form-label text">Wallet address:</label>
+							<input type="text" placeholder="Insert wallet address here..." id="contractBalanceInput">
+						</div>
+						<button type="submit" onclick="initializeContract(); readButton()" class="btn btn-primary" id=”name-button”>Submit</button>
+					</form>
+				</div>
+				<div class="col">
+					<h1 class="text">Greatest showtime</h1>
+				</div>
+			</div>
+		</div>
+
 		<p id="p1" class="text"> </p><br>
 		<button class="metashit">
 			<span class="metashit-label">
@@ -62,6 +80,7 @@
 				<img class="metashit-img" src="https://v1.yearn.finance/static/media/icn-metamask.e8109252.svg" alt="">
 			</span>
 		</button>
+
 	</div>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 	<script src="./script/web3.js"></script>
