--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 		<div class="container">
 			<div class="row">
-				<div class="col">
+				<div class="col border rounded">
 					<h1 class="text">Crypto Pets</h1>
 					<h2 id=”instructor” class="text">Insert contract address and wallet address</h2>
 					<form>
@@ -67,7 +67,7 @@
 						<button type="submit" onclick="initializeContract(); readButton()" class="btn btn-primary" id=”name-button”>Submit</button>
 					</form>
 				</div>
-				<div class="col">
+				<div class="col border rounded col-xs-1" align="center">
 					<h1 class="text">Greatest showtime</h1>
 				</div>
 			</div>
