--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
 						<a class="nav-link" href="#">Read</a>
 					</li>
 				</ul>
-				
+
 				<form class="d-flex">
-					<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-					<button class="btn btn-outline-success" type="submit">Search</button>
+					<button class="btn btn-outline-success" type="submit">Connect wallet</button>
 				</form>
 			</div>
 		</div>
@@ -62,14 +61,6 @@
 				</div>
 			</div>
 		</div>
-
-		<p id="p1" class="text"> </p><br>
-		<button class="metashit">
-			<span class="metashit-label">
-				<h3 class="metashit-h3">MetaMask</h3>
-				<img class="metashit-img" src="https://v1.yearn.finance/static/media/icn-metamask.e8109252.svg" alt="">
-			</span>
-		</button>
 
 	</div>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
