--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col">
-					<h1 class="text">Crypto Pets</h1>
-					<h2 id=”instructor” class="text">Insert wallet address to get info</h2>
+					<h2 id=”instructor” class="text">Insert wallet address or connect your wallet to get started</h2>
 					<form>
 						<div class="mb-3">
 							<label for="exampleInputPassword1" class="form-label text">Wallet address:</label>
@@ -63,7 +62,7 @@
 					<p class="text" id="p1"></p>
 				</div>
 				<div class="col border rounded col-xs-1" align="center">
-					<h1 class="text">Greatest showtime</h1>
+					<h1 class="text">Hyper reality show</h1>
 				</div>
 			</div>
 		</div>
