--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
 				</div>
 				<div class="col border rounded col-xs-1" align="center">
 					<h1 class="text">Hyper reality show</h1>
+					<figure class="figure">
+						<svg class="bd-placeholder-img figure-img img-fluid rounded" width="400" height="300" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 400x300" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">400x300</text></svg>
+						<figcaption class="figure-caption">A caption for the above image.</figcaption>
+					</figure>
 				</div>
 			</div>
 		</div>
