--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
 							<label for="exampleInputPassword1" class="form-label text">Wallet address:</label>
 							<input type="text" placeholder="Insert wallet address here..." id="contractBalanceInput">
 						</div>
+						<div class="mb-3">
+							<label for="exampleInputPassword1" class="form-label text">Token ID:</label>
+							<input type="text" placeholder="Insert token ID here..." id="tokenIdInput">
+						</div>
 						<button type="button" onclick="initializeContract(); readButton()" class="btn btn-primary" id=”name-button”>Submit</button>
 					</form>
 					<p class="text" id="p1"></p>
@@ -72,7 +76,7 @@
 						<h3 class="text">Name:</h3>
 						<h4 class="text" id="cardName">Placeholder</h4>
 						<h3 class="text" style="padding-top: 35px">ID:</h3>
-						<h4 class="text" style="padding-bottom: 25px" id="cardName">Placeholder</h4>
+						<h4 class="text" style="padding-bottom: 25px" id="cardId">Placeholder</h4>
 					</div>
 				</div>
 			</div>
