Added functions for token uri processing

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 	<script src="./script/web3.js"></script>
 	<script src="./script/input.js"></script>
 	<script src="./script/readFunctions.js"></script>
+	<div id="javajeet" style="display: none;"></div>
 </body>
 
 </html>
