Placeholder is removed when token is read.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 					<figure class="figure" id="petImgPlaceholder">
 						<svg class="bd-placeholder-img figure-img img-fluid rounded" width="400" height="300" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 400x300" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="18%" y="50%" fill="#dee2e6" dy=".3em">Input address and token ID to view info</text></svg>
  					</figure>
- 					<img src="" height="300" class="rounded mx-auto d-block" alt="" style="display: none;" id="petImg">
+ 					<img src="" height="300" class="rounded mx-auto d-block" alt="" id="petImg">
 
  					<div id="cardInfo" style="display: none">
 						<h3 class="text">Name:</h3>
