--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
 					<h1 class="text" style="padding-top: 10px">Crypto Pets</h1>
 					<figure class="figure" id="petImgPlaceholder">
 						<svg class="bd-placeholder-img figure-img img-fluid rounded" width="400" height="300" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 400x300" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="18%" y="50%" fill="#dee2e6" dy=".3em">Input address and token ID to view info</text></svg>
- 					</figure>
- 					<img src="" height="300" class="rounded mx-auto d-block" alt="" id="petImg">
+					</figure>
+					<img src="" height="300" class="rounded mx-auto d-block" alt="" id="petImg">
 
- 					<div id="cardInfo" style="display: none">
+					<div id="cardInfo" style="display: none">
 						<h3 class="text">Name:</h3>
 						<h4 class="text" id="cardName">Placeholder</h4>
 						<h3 class="text" style="padding-top: 35px">ID:</h3>
@@ -90,6 +90,12 @@
 	<script src="./script/input.js"></script>
 	<script src="./script/readFunctions.js"></script>
 	<div id="javajeet" style="display: none;"></div>
+
+	<footer class="footer mt-auto py-3 bg-dark text">
+		<div class="container">
+			<span class="text-muted">Made by <a href="">Vukasin Gostovic</a> with ❤️. Licensed under 3BSD.</span>
+		</div>
+	</footer>
 </body>
 
 </html>
