--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="#">Home</a>
+						<a class="nav-link active" aria-current="page" href="index.html" target="_self">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Mint</a>
+						<a class="nav-link" href="write.html" target="_self">Mint</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Read</a>
+						<a class="nav-link" href="read.html" target="_self">Read</a>
 					</li>
 				</ul>
 
