Updated footer and meta

--- a/read.html
+++ b/read.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang=”en”>
+<html lang="en">
 <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -26,7 +27,7 @@
 						<a class="nav-link" href="write.html" target="_self">Mint</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="read.html" target="_self">Read</a>
+						<a class="nav-link" href="read.html" target="_self">View Token</a>
 					</li>
 				</ul>
 
@@ -93,7 +94,7 @@
 
 	<footer class="footer mt-auto py-3 bg-dark text">
 		<div class="container">
-			<span class="text-muted">Made by <a href="">Vukasin Gostovic</a> with ❤️. Licensed under 3BSD.</span>
+			<span class="text-muted">Made by <a href="https://github.com/makemake-kbo/CryptoPets">Vukasin Gostovic</a> with ❤️. Licensed under 3BSD.</span>
 		</div>
 	</footer>
 </body>
