Added files related to the write page.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="en">
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="Mint your pets on the blockchain!">
@@ -31,8 +33,8 @@
 		<main role="main" class="inner cover">
 			<h1 class="cover-heading">Crypto Pets</h1>
 			<p class="lead">
-			Crypto Pets is an ERC-721 token that enables anyone to tokenize their pets on the blockchain.<br>
-			Start collecting Crypto Pets now!
+				Crypto Pets is an ERC-721 token that enables anyone to tokenize their pets on the blockchain.<br>
+				Start collecting Crypto Pets now!
 			</p>
 			<p class="lead">
 				<a href="https://getbootstrap.com/docs/4.0/examples/cover/#" class="btn btn-lg btn-secondary">Mint now</a>
