Updated write html

--- a/write.html
+++ b/write.html
@@ -54,44 +54,41 @@
 		<div class="container">
 			<div class="row">
 				<div class="col">
-					<h2 id=”instructor” class="text">Mint your Crypto Pet!</h2>
-					<form>
-						<div class="mb-3">
+					<h2 id=”instructor” class="text">Mint your Crypto</h2>
 
-						</div>
-						<div class="col border rounded col-xs-1" align="center">
-							<h1 class="text" style="padding-top: 10px">Crypto Pets</h1>
-							<figure class="figure" id="petImgPlaceholder">
-								<svg class="bd-placeholder-img figure-img img-fluid rounded" width="400" height="300" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 400x300" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="18%" y="50%" fill="#dee2e6" dy=".3em">Input address and token ID to view info</text></svg>
-							</figure>
-							<img src="" height="300" class="rounded mx-auto d-block" alt="" id="petImg">
+				</div>
+				<div class="col border rounded col-xs-1" align="center">
+					<h1 class="text" style="padding-top: 10px">Crypto Pets</h1>
+					<figure class="figure" id="petImgPlaceholder">
+						<svg class="bd-placeholder-img figure-img img-fluid rounded" width="400" height="300" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 400x300" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="18%" y="50%" fill="#dee2e6" dy=".3em">Input address and token ID to view info</text></svg>
+					</figure>
+					<img src="" height="300" class="rounded mx-auto d-block" alt="" id="petImg">
 
-							<div id="cardInfo" style="display: none">
-								<h3 class="text">Name:</h3>
-								<h4 class="text" id="cardName">Placeholder</h4>
-								<h3 class="text" style="padding-top: 35px">ID:</h3>
-								<h4 class="text" style="padding-bottom: 25px" id="cardId">Placeholder</h4>
-							</div>
-						</div>
+					<div id="cardInfo" style="display: none">
+						<h3 class="text">Name:</h3>
+						<h4 class="text" id="cardName">Placeholder</h4>
+						<h3 class="text" style="padding-top: 35px">ID:</h3>
+						<h4 class="text" style="padding-bottom: 25px" id="cardId">Placeholder</h4>
 					</div>
 				</div>
 			</div>
+		</div>
+	</div>
 
-			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 
-			<script type="text/javascript" src="https://unpkg.com/web3modal@1.9.0/dist/index.js"></script>
-			<script type="text/javascript" src="https://unpkg.com/evm-chains@0.2.0/dist/umd/index.min.js"></script>
+	<script type="text/javascript" src="https://unpkg.com/web3modal@1.9.0/dist/index.js"></script>
+	<script type="text/javascript" src="https://unpkg.com/evm-chains@0.2.0/dist/umd/index.min.js"></script>
 
-			<script src="./script/web3.js"></script>
-			<script src="./script/input.js"></script>
-			<script src="./script/readFunctions.js"></script>
-			<script src="./script/write.js"></script>
+	<script src="./script/web3.js"></script>
+	<script src="./script/input.js"></script>
+	<script src="./script/readFunctions.js"></script>
 
-			<footer class="footer mt-auto py-3 bg-dark text">
-				<div class="container">
-					<span class="text-muted">Made by <a href="https://github.com/makemake-kbo/CryptoPets">Vukasin Gostovic</a> with ❤️. Licensed under 3BSD.</span>
-				</div>
-			</footer>
-		</body>
+	<footer class="footer mt-auto py-3 bg-dark text">
+		<div class="container">
+			<span class="text-muted">Made by <a href="https://github.com/makemake-kbo/CryptoPets">Vukasin Gostovic</a> with ❤️. Licensed under 3BSD.</span>
+		</div>
+	</footer>
+</body>
 
-		</html>
+</html>
