Updated footer and added input forms for minting

--- a/read.html
+++ b/read.html
@@ -95,7 +95,7 @@
 
 	<footer class="footer mt-auto py-3 bg-dark text">
 		<div class="container">
-			<span class="text-muted">Made by <a href="https://github.com/makemake-kbo/CryptoPets">Vukasin Gostovic</a> with ❤️. Licensed under 3BSD.</span>
+			<span class="text-muted">Made by <a href="https://github.com/makemake-kbo/CryptoPets" style="color: #fff;text-decoration: none;">Vukasin Gostovic</a> with ❤️. Licensed under 3BSD.</span>
 		</div>
 	</footer>
 </body>
