--- a/write.html
+++ b/write.html
@@ -79,15 +79,15 @@
 				<div class="col border rounded col-xs-1" align="center">
 					<h1 class="text" style="padding-top: 10px">Crypto Pets</h1>
 					<figure class="figure" id="petImgPlaceholder">
-						<svg class="bd-placeholder-img figure-img img-fluid rounded" width="400" height="300" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 400x300" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="18%" y="50%" fill="#dee2e6" dy=".3em">Input address and token ID to view info</text></svg>
+						<svg class="bd-placeholder-img figure-img img-fluid rounded" width="400" height="300" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 400x300" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="25%" y="50%" fill="#dee2e6" dy=".3em">Input valid CID to view image</text></svg>
 					</figure>
 					<img src="" height="300" class="rounded mx-auto d-block" alt="" id="petImg">
 
-					<div id="cardInfo" style="display: none">
+					<div id="cardInfo" >
 						<h3 class="text">Name:</h3>
-						<h4 class="text" id="cardName">Placeholder</h4>
+						<h4 class="text" id="cardName">¯\_(ツ)_/¯</h4>
 						<h3 class="text" style="padding-top: 35px">ID:</h3>
-						<h4 class="text" style="padding-bottom: 25px" id="cardId">Placeholder</h4>
+						<h4 class="text" style="padding-bottom: 25px" id="cardId">¯\_(ツ)_/¯</h4>
 					</div>
 				</div>
 			</div>
@@ -100,7 +100,7 @@
 	<script type="text/javascript" src="https://unpkg.com/evm-chains@0.2.0/dist/umd/index.min.js"></script>
 
 	<script src="./script/web3.js"></script>
-	<script src="./script/input.js"></script>
+	<script src="./script/writeInput.js"></script>
 	<script src="./script/readFunctions.js"></script>
 
 	<footer class="footer mt-auto py-3 bg-dark text">
