Cleaned up web3 initialization. Contract ABI and address now in a separate file.

--- a/read.html
+++ b/read.html
@@ -89,6 +89,7 @@
 	<script type="text/javascript" src="https://unpkg.com/web3modal@1.9.0/dist/index.js"></script>
 	<script type="text/javascript" src="https://unpkg.com/evm-chains@0.2.0/dist/umd/index.min.js"></script>
 
+	<script src="./script/contractInfo.js"></script>
 	<script src="./script/web3.js"></script>
 	<script src="./script/input.js"></script>
 	<script src="./script/readFunctions.js"></script>
