--- a/write.html
+++ b/write.html
@@ -74,6 +74,9 @@
 						</div>
 						<button type="submit" class="btn btn-primary">Mint</button>
 					</form>
+					<div class="text" style="display: none;" id="mintResult">
+						<h2>Minted!</h2>
+					</div>
 
 				</div>
 				<div class="col border rounded col-xs-1" align="center">
@@ -99,8 +102,10 @@
 	<script type="text/javascript" src="https://unpkg.com/web3modal@1.9.0/dist/index.js"></script>
 	<script type="text/javascript" src="https://unpkg.com/evm-chains@0.2.0/dist/umd/index.min.js"></script>
 
+	<script src="./script/contractInfo.js"></script>
 	<script src="./script/web3.js"></script>
 	<script src="./script/writeInput.js"></script>
+	<script src="./script/write.js"></script>
 	<script src="./script/readFunctions.js"></script>
 
 	<footer class="footer mt-auto py-3 bg-dark text">
