minting works, web3 you undocumented piece of garbage

--- a/write.html
+++ b/write.html
@@ -72,7 +72,7 @@
 							<input type="text" class="form-control" id="cidInputField" aria-describedby="cidInputHelp">
 							<div id="cidInputHelp" class="form-text">This will be the CID of your pet image hosted on IPFS. Unfamiliar with IPFS? Use <a href="https://pinata.cloud/" style="color: #fff">Pinata</a> to upload your pet image to IPFS.</div>
 						</div>
-						<button type="submit" class="btn btn-primary">Mint</button>
+						<button type="button" class="sendEthButton btn btn-primary">Mint</button>
 					</form>
 					<div class="text" style="display: none;" id="mintResult">
 						<h2>Minted!</h2>
