--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<meta name="author" content="Vukasin Gostovic">
 
 	<title>Crypto Pets - Home</title>
+	<link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
+
 
 	<!-- Bootstrap core CSS -->
 	<link href="./cover_page/bootstrap.min.css" rel="stylesheet">
