--- a/read.html
+++ b/read.html
@@ -6,6 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Crypto Pets</title>
+	<link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
+
 	<link rel="stylesheet" type="text/css" href="index.css">
 	<script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
