--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<h1 class="cover-heading">Crypto Pets</h1>
 			<p class="lead">
 				Crypto Pets is an ERC-721 token that enables anyone to tokenize their pets on the blockchain.<br>
-				Start collecting Crypto Pets now!
+				Create your very own Crypto Pet now!
 			</p>
 			<p class="lead">
 				<a href="https://getbootstrap.com/docs/4.0/examples/cover/#" class="btn btn-lg btn-secondary">Mint now</a>
