--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				Create your very own Crypto Pet now!
 			</p>
 			<p class="lead">
-				<a href="https://getbootstrap.com/docs/4.0/examples/cover/#" class="btn btn-lg btn-secondary">Mint now</a>
+				<a href="write.html" class="btn btn-lg btn-secondary">Mint now</a>
 			</p>
 		</main>
 
