--- a/write.html
+++ b/write.html
@@ -80,7 +80,7 @@
                     <figure class="figure" id="petImgPlaceholder">
                         <svg class="bd-placeholder-img figure-img img-fluid rounded" width="400" height="300" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 400x300" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="25%" y="50%" fill="#dee2e6" dy=".3em">Input valid CID to view image</text></svg>
                     </figure>
-                    <img src="" height="300" class="rounded mx-auto d-block" alt="" id="petImg">
+                    <img src="" class="rounded mx-auto d-block" alt="" id="petImg">
 
                     <div id="cardInfo" >
                         <h3 class="text">Name:</h3>
